--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "3box-comments-react": "0.0.8",
     "@apollo/react-hooks": "^3.1.3",
     "@fvictorio/newton-raphson-method": "^1.0.5",
+    "@gelatonetwork/core": "^1.6.0",
     "@gnosis.pm/safe-apps-sdk": "1.0.1",
     "@kleros/erc-792": "^7.0.0",
     "@kleros/gtcr-encoder": "^1.1.3",
